--- a/style/bootstrap.css
+++ b/style/bootstrap.css
@@ -1088,7 +1088,7 @@ html {
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
-  line-height: 1;
+  line-height:  ;
   color: #333;
   background-color: #fff;
 }
