--- a/style/style.css
+++ b/style/style.css
@@ -325,8 +325,8 @@ i.fa.fa-tasks{
 /*start search*/
 .search-box {
     float: left;
-    width: 34%;
-    margin: 1.2em 0 0 8em;
+    width: 30%;
+    margin: 1.2em 0 0 4em;
     position: relative;
     z-index: 1;
     display: inline-block;
@@ -860,7 +860,7 @@ ul.dropdown-menu {
     padding: 1em;
     min-width: 135px;
     top: 122%;
-    left: 0;
+    left: -40px;
 }
 ul.dropdown-menu.drp-mnu li {
     list-style-type: none;
