--- a/style/button.css
+++ b/style/button.css
@@ -4,20 +4,19 @@
 }
 
 .collect {
-    width: 4em;
-    height: 2.2em;
+    width: 1.8em;
+    height: 1.8em;
     float: left;
-    margin-right:10%;
-    border-radius: 4px;
-    border: 1px solid #B0C4DE;
-    background-color: #FFFFF0;
+    border: none;
+    background-color: transparent;
     transition: 0.5s;
     -webkit-transition: 0.5s;
     -moz-transition: 0.5s;
+    background:url(../images/image/collect.png) no-repeat
 }
 
 .collect:hover {
-    background-color: #ADD8E6;
+    background-color: transparent;
 }
 
 .button{
