--- a/style/nav-total-left.css
+++ b/style/nav-total-left.css
@@ -1,5 +1,3 @@
-
-
 .nav-total:hover{
 	cursor: pointer;
 }
@@ -15,8 +13,8 @@
     float: left;
     margin-left:4%;
     text-align: center;
-    padding-top: 0.4em;
-    padding-bottom: 0.4em;
+    padding-top: 0.6em;
+    padding-bottom: 0.6em;
     position: fixed;
     background-color: #FFFFFF;
     box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
@@ -45,7 +43,7 @@
 }
 
 .classification ul li a{
-	color: #8DB6CD;
+	color: #4F4F4F;
 	transition: 0.6s;
 	-webkit-transition: 0.6s;
 	-moz-transition: 0.6s;
@@ -53,6 +51,10 @@
 
 .classification ul li a:hover{
 	cursor: pointer;
+}
+
+.classification_type:after {
+    text-decoration:none;
 }
 
 .nav-right-one {
@@ -102,14 +104,18 @@
 
 .nav-right-one ul li:hover,.nav-right-two ul li:hover{
 	cursor: pointer;
-	background-color: #E0EEEE;
+	background-color: #EBEBEB;
 }
 
 .nav-right-one ul li a,.nav-right-two ul li a{
-	color: #8DB6CD;
+	color: #4F94CD;
 	transition: 0.6s;
 	-webkit-transition: 0.6s;
 	-moz-transition: 0.6s;
+}
+
+.nav-right-one_a_after:after, .nav-right-two_a_after:after {
+    text-decoration: none;
 }
 
 .nav-right-one ul li a:hover,.nav-right-two ul li a:hover{
