--- a/style/content.css
+++ b/style/content.css
@@ -64,6 +64,10 @@
     padding-right:0.5em;
 }
 
+.like_count:hover, .unlike_count:hover {
+    cursor:pointer;
+}
+
 .isLikeButton_like{
 	width: 1.5em;
 	height: 1.5em;
