--- a/style/view.css
+++ b/style/view.css
@@ -80,7 +80,7 @@
 }
 
 .subtitleTime_box {
-    width: 20%;
+    width: 25%;
     min-height: 1em;
     height: auto;
     float: right;
@@ -160,7 +160,16 @@
     font-size: 20px;
 }
 
-.comment_box {
+.comment_box_single {
+    width: 94%;
+    height: auto;
+    margin: auto;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-bottom: 1px solid #C1C1C1;
+}
+
+.comment_box_double {
     width: 94%;
     height: auto;
     margin: auto;
@@ -193,33 +202,41 @@
 }
 
 .comment_box_bottom{
+    width:100%;
+    height:auto;
     padding-bottom:2%;
 }
 
-.comment_box_bottom ul {
-    list-style:none;
-    list-style-type:none;
-}
 
 .fa_img {
     width: 3%;
     list-style: none;
     list-style-type: none;
     float: left;
+    padding-top: 3px;
+    padding-left: 1px;
 }
 
 .replyButton .reportButton {
-    width:3em;;
+    width:10%;
     list-style: none;
     list-style-type: none;
     float: left;
 }
 
 .comment_box_bottom_button {
-    width:100%;
-    height:auto;
+    width: 6%;
+    float: left;
+    height: auto;
     border: none;
     background-color: transparent;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+}
+
+.comment_box_bottom_button:hover {
+    color:#436EEE;
 }
 
 .footer{
