--- a/style/style.css
+++ b/style/style.css
@@ -2526,7 +2526,7 @@ button#default-map-btn, button#green-map-btn, button#blue-map-btn,button#grey-ma
     width: 100%;
     color: #A8A8A8;
     outline: none;
-    border: 1px solid #D3D3D3;
+    border: 1px solid #8DB6CD;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -2571,7 +2571,7 @@ button#default-map-btn, button#green-map-btn, button#blue-map-btn,button#grey-ma
 }
 .forgot a {
 	font-size: .75em;
-    color: #67D3E0;
+    color: #A3A3A3;
     font-weight: 600;
     display: block;
     text-transform: uppercase;
@@ -2591,7 +2591,7 @@ button#default-map-btn, button#green-map-btn, button#blue-map-btn,button#grey-ma
 }
 .signup-text a{
 	font-size: .75em;
-    color: #67D3E0;
+    color: #0084ff;
     font-weight: 600;
     display: block;
     text-transform: uppercase;
