--- a/style/button.css
+++ b/style/button.css
@@ -1,6 +1,38 @@
-.searchButton{
-    width:27px;
-    height:27px;
+#searchText {
+    padding-left: 5px;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    font: 400 13.3333px Arial;
+    border-radius:4px;
+    border: 1px solid #E3E3E3;
+}
+
+.search-button {
+    width: 15%;
+    padding-left: 3%;
+    float: left;
+    margin-top: 1.2em;
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+}
+
+#searchButton {
+    width: 30%;
+    border-radius: 4px;
+    border: 1px solid #E3E3E3;
+    padding-top: 0px;
+    color: white;
+    background-color: #0084ff;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+}
+
+#searchButton:hover {
+    color: #104E8B;
+    background-color: #8EE5EE;
 }
 
 .collect {
