--- a/style/content.css
+++ b/style/content.css
@@ -22,7 +22,7 @@
 }
 
 .sort{
-	width: 100%;
+	width: 50%;
 	line-height: 1.2em;
 	border-left: 3px solid #9AC0CD ;
 	margin-left: 0.5em;
@@ -31,6 +31,7 @@
 	padding-left: 0.8em;
 	padding-top: 0.2em;
 	padding-bottom: 0.2em;
+    float:left;
 	clear: both;
 	color: #00C2EA;
 }
@@ -40,22 +41,40 @@
 	margin-left:50%;
 }
 
-.collectBox{
-    width:3em;
-	height: auto;
-    float:left;
+.collectBox {
+    width: 3em;
+    height: auto;
+    float: left;
+    margin-left: 0.5em;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    padding-left: 0.8em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
 }
 
-.likeBox{
-    width:35%;
-	height: auto;
-    float:left;
+.likeBox {
+    width: 20%;
+    height: auto;
+    float: left;
+    margin-left: 0.5em;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    padding-left: 0.8em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
 }
 
-.unlikeBox{
-    width:35%;
-	height: auto;
-    float:left;
+.unlikeBox {
+    width: 20%;
+    height: auto;
+    float: left;
+    margin-left: 0.5em;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    padding-left: 0.8em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
 }
 
 .like_count,.unlike_count{
