--- a/style/style.css
+++ b/style/style.css
@@ -291,7 +291,7 @@ i.fa.fa-tasks{
 }
 /* ----Logo----*/
 .logo {
-    background: transparent;
+    background: #87CEEB;
     text-align: center;
     float: left;
 }
@@ -326,7 +326,7 @@ i.fa.fa-tasks{
 /*start search*/
 .search-box {
     float: left;
-    width: 30%;
+    width: 18%;
     margin: 1.2em 0 0 4em;
     position: relative;
     z-index: 1;
