--- a/style/user_imformation.css
+++ b/style/user_imformation.css
@@ -10,12 +10,81 @@
 }
 
 .user_message_background {
+    min-height:10em;
+    height:auto;
     background-color: #FFFFFF;
     box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
 }
 
+
 .user_message{
     width:100%;
-    min-height:5em;
+    min-height:22em;
     height:auto;
+}
+
+.form-title {
+    padding: 1em 2em;
+    background-color: #67D3E0;
+    border-bottom: 1px solid #D6D5D5;
+    margin-bottom:1em;
+}
+
+.form-title h4 {
+    font-size: 1.3em;
+    color: #FFFFFF;
+}
+
+.user_left {
+    width: 10%;
+    height: 10%;
+    margin-top: 12%;
+    margin-right: 2%;
+    margin-bottom: 5%;
+    margin-left: 8%;
+    float: left;
+}
+
+.user_right {
+    width: 80%;
+    padding-top: 2%;
+    padding-right: 5%;
+    padding-bottom: 2%;
+    padding-left: 5%;
+    float: left;
+}
+
+.form-group {
+    width: 100%;
+    height: auto;
+    clear: both;
+}
+
+.labelPosition{
+    margin-top:10px;
+}
+
+.form-group_save {
+    width: 100%;
+    padding-left:20%;
+    height: auto;
+    clear: both;
+}
+
+#saveChange {
+    width: 50%;
+    height: 2.2em;
+    border-radius: 4px;
+    border: none;
+    color: white;
+    background-color: #4876FF;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    font-size: 1.1em;
+}
+
+#saveChange:hover{
+    color: #000080;
+    background-color: #87CEEB;
 }
