--- a/style/view.css
+++ b/style/view.css
@@ -48,6 +48,15 @@
     padding-right: 8%;
 }
 
+.comment_are {
+    width: 100%;
+    min-height: 10em;
+    margin-top: 2em;
+    background-color: #FFFFFF;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
+}
+
 .comment_area {
     width: 100%;
     min-height: 10em;
@@ -229,6 +238,10 @@
     float: left;
 }
 
+.replyContent{
+
+}
+
 .comment_box_bottom_button {
     width: 6%;
     float: left;
@@ -242,6 +255,25 @@
 
 .comment_box_bottom_button:hover {
     color:#436EEE;
+}
+
+.comment_box_bottom_confirm {
+    width: 6%;
+    float: left;
+    height: auto;
+    border: none;
+    background-color: transparent;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+}
+
+.comment_box_bottom_button:hover {
+    color: #436EEE;
+}
+
+.comment_box_bottom_text{
+
 }
 
 .footer{
