--- a/style/style.css
+++ b/style/style.css
@@ -291,7 +291,7 @@ i.fa.fa-tasks{
 }
 /* ----Logo----*/
 .logo {
-    background: #87CEEB;
+    background: transparent;
     text-align: center;
     float: left;
 }
@@ -326,8 +326,8 @@ i.fa.fa-tasks{
 /*start search*/
 .search-box {
     float: left;
-    width: 18%;
-    margin: 1.2em 0 0 4em;
+    width: 30%;
+    margin: 1.2em 0 0 1em;
     position: relative;
     z-index: 1;
     display: inline-block;
@@ -2526,7 +2526,7 @@ button#default-map-btn, button#green-map-btn, button#blue-map-btn,button#grey-ma
     width: 100%;
     color: #A8A8A8;
     outline: none;
-    border: 1px solid #8DB6CD;
+    border: 1px solid #D3D3D3;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -2538,14 +2538,13 @@ button#default-map-btn, button#green-map-btn, button#blue-map-btn,button#grey-ma
     outline: none;
     cursor: pointer;
     color: #fff;
-    background: #0084ff;
+    background: #fd5c63;
     width: 100%;
     padding: .5em 1em;
     font-size: 1em;
     margin: 1.5em 0 0;
 }
 .login-info input[type="submit"]:hover{
-    color: #104E8B;
 	background:#67d3e0;
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
@@ -2571,7 +2570,7 @@ button#default-map-btn, button#green-map-btn, button#blue-map-btn,button#grey-ma
 }
 .forgot a {
 	font-size: .75em;
-    color: #A3A3A3;
+    color: #67D3E0;
     font-weight: 600;
     display: block;
     text-transform: uppercase;
@@ -2591,7 +2590,7 @@ button#default-map-btn, button#green-map-btn, button#blue-map-btn,button#grey-ma
 }
 .signup-text a{
 	font-size: .75em;
-    color: #0084ff;
+    color: #67D3E0;
     font-weight: 600;
     display: block;
     text-transform: uppercase;
