--- a/style/view.css
+++ b/style/view.css
@@ -67,10 +67,10 @@
 .comment_area {
     width: 100%;
     min-height: 10em;
-    margin-top:2em;
-    background-color: #FFFFFF;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
+    margin-top: 2em;
+    padding: 10px;
+    background: #ffffff;
+    clear:both;
 }
 .comment_area article{
 
@@ -170,6 +170,7 @@
 .comment_area_title {
     width: 15%;
     height: auto;
+    float:left;
     border-bottom: 2px solid #EE7942;
     padding-top: 2%;
     padding-bottom: 1%;
@@ -292,4 +293,26 @@
     width:100%;
     min-height:3em;
     height:auto;
+}
+.fold-box {
+    padding: 10px;
+    background: #e5eecc;
+    border: solid 1px #c3c3c3;
+    display: none;
+    margin: 10px;
+}
+
+.fold-button {
+    float:right;
+    padding-top:2%;
+    margin-right: 4%;
+}
+
+.fold-button span {
+        display: inline-block;
+        padding: 5px 15px;
+        background-color: #32a5e7;
+        color: #fff;
+        border-radius: 2px;
+        cursor: pointer;
 }
