--- a/style/style.css
+++ b/style/style.css
@@ -292,7 +292,7 @@ i.fa.fa-tasks{
 }
 /* ----Logo----*/
 .logo {
-    background: transparent;
+    background: #7EC0EE;
     text-align: center;
     float: left;
 }
@@ -327,8 +327,8 @@ i.fa.fa-tasks{
 /*start search*/
 .search-box {
     float: left;
-    width: 30%;
-    margin: 1.2em 0 0 4em;
+    width: 20%;
+    margin: 1.2em 0 0 0;
     position: relative;
     z-index: 1;
     display: inline-block;
