--- a/style/nav-total-left.css
+++ b/style/nav-total-left.css
@@ -59,7 +59,7 @@
 
 .nav-right-one {
     width: 20%;
-    min-height: 20em;
+    min-height: 16em;
     padding-top: 0.8em;
     padding-bottom: 0.8em;
     color: #2A2F43;
@@ -73,7 +73,7 @@
 .nav-right-two {
     width: 20%;
     min-height: 10em;
-    padding-top: 0.8em;
+    padding-top: 1.2em;
     padding-bottom: 0.8em;
     color: #2A2F43;
     background-color: #FFFFFF;
@@ -108,6 +108,7 @@
 }
 
 .nav-right-one ul li a,.nav-right-two ul li a{
+    font-size:12px;
 	color: #4F94CD;
 	transition: 0.6s;
 	-webkit-transition: 0.6s;
@@ -131,7 +132,7 @@
     height:20px;
     font-size: 1.2em;
     text-align: center;
-    height: 1em;
+    height: 0.6em;
 }
 
 .header-nav {
