--- a/style/style.css
+++ b/style/style.css
@@ -857,6 +857,14 @@ ul.dropdown-menu {
     padding-right: 2px;
 }
 
+.profile_img img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
 .profile_details ul li{
 	list-style-type:none;
 	position:relative;
