--- a/style/announceview.css
+++ b/style/announceview.css
@@ -1,2 +1,62 @@
 ﻿body {
 }
+
+.artcle_message {
+    padding-bottom: 2em;
+    background-color: #FFFFFF;
+    box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
+}
+
+.artcle_message_box{
+    width:80%;
+    height:auto;
+    margin:auto;
+    padding-top:1.5em;
+}
+
+.artcle_labelPosition {
+    font-size: 1em;
+    margin-top: 0.6em;
+}
+
+.artcle_text {
+    width:86%;
+}
+
+.artcle-input-group{
+    width:100%;
+}
+
+.col-md-artcle-label {
+    width: 13.5%;
+    float: left;
+}
+
+.form-control1_artcle {
+    border: 1px solid #ccc;
+    color: #616161;
+    background: #fff;
+    box-shadow: none !important;
+    width: 100%;
+    font-weight: 300;
+    height: 40px;
+    border-radius: 0;
+    margin-top: 0.6em;
+}
+
+#Upload {
+    width: 50%;
+    height: 2.2em;
+    border-radius: 4px;
+    border: none;
+    color: white;
+    background-color: #4876FF;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    font-size: 1.1em;
+}
+
+#Upload:hover {
+    background-color: #7EC0EE;
+}
