--- a/style/button.css
+++ b/style/button.css
@@ -9,17 +9,17 @@
 }
 
 .search-button {
-    width: 5%;
+    width: 15%;
+    padding-left: 3%;
     float: left;
-    margin-top: 1.5em;
-    margin-left:1%;
+    margin-top: 1.2em;
     position: relative;
     z-index: 1;
     display: inline-block;
 }
 
 #searchButton {
-    width: 100%;
+    width: 30%;
     border-radius: 4px;
     border: 1px solid #E3E3E3;
     padding-top: 0px;
