--- a/style/food_index.css
+++ b/style/food_index.css
@@ -1,2 +1,80 @@
 ﻿body {
 }
+
+.panel-title-food {
+    width: 100%;
+    color: #2A2F43;
+    border-bottom: 1px solid #EE7942;
+    font-size: 1.4em;
+    padding: 16px 20px;
+    background: #FFFFFF;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    letter-spacing: 1px;
+}
+
+.panel-title-food > a{
+    color:inherit;
+}
+
+.panel-title-food-score {
+
+}
+
+.content-right-line{
+    width:100%;
+    height:1.2em;
+    padding-top:0.8em;
+    padding-bottom:0.8em;
+}
+
+.food-comments {
+    height: 1.2em;
+    float: left;
+    padding-top: 0.1em;
+    color: #919191;
+}
+
+.food-comment {
+    height: 1.2em;
+    float: left;
+    color: #919191;
+}
+
+.per-capita-prices {
+    height: 1.2em;
+    float: left;
+    color: #919191;
+}
+
+.per-capita-price {
+    height: 1.2em;
+    float: left;
+    color: #919191;
+    margin-right:10%;
+}
+
+.food-address {
+    height: 1.2em;
+    float: left;
+    color: #919191;
+}
+
+.food-sort {
+    height: 1.2em;
+    float: left;
+    color: #919191;
+}
+
+.food-recommends {
+    height: 1.2em;
+    float: left;
+    color: #919191;
+    margin-right: 5%;
+}
+
+.food-recommend {
+    height: 1.2em;
+    float: left;
+    color: #919191;
+}
