--- a/style/style.css
+++ b/style/style.css
@@ -2579,7 +2579,7 @@ button#default-map-btn, button#green-map-btn, button#blue-map-btn,button#grey-ma
     outline: none;
     cursor: pointer;
     color: #fff;
-    background: #fd5c63;
+    background: #0084ff;
     width: 100%;
     padding: .5em 1em;
     font-size: 1em;
