--- a/style/duanzi_index.css
+++ b/style/duanzi_index.css
@@ -1,14 +1,24 @@
-﻿.subexample {
+﻿.subexample_left {
+    clear: both;
     width: 50%;
     line-height: 1.2em;
-    border-left: 3px solid #9AC0CD;
     margin-left: 0.5em;
-    margin-top: 2em;
-    margin-bottom: 1em;
+    margin-top: 1em;
     padding-left: 0.8em;
     padding-top: 0.2em;
     padding-bottom: 0.2em;
-    clear: both;
+    float: left;
+}
+
+.subexample_right {
+    width: 30%;
+    line-height: 1.2em;
+    margin-right: 0.5em;
+    margin-top: 1em;
+    padding-right: 0.8em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+    float: right;
 }
 
 .duanzi_sort {
@@ -46,4 +56,35 @@
     padding-top: 0.2em;
     padding-bottom: 0.2em;
     color: #919191;
+}
+
+.view_duanzi_collectBox {
+    width: 3em;
+    height: auto;
+    float: left;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding-left: 0.5em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+}
+
+.view_duanzi_likeBox {
+    width: 4em;
+    height: auto;
+    float: left;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding-left: 0.5em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+    line-height: 1.3em;
+    color: #19CF8A;
+    border: none;
+}
+
+.index_duanzi_like_count {
+    float: right;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
