--- a/style/view_duanzi.css
+++ b/style/view_duanzi.css
@@ -24,3 +24,52 @@
     padding-left: 0.5em;
     color: #919191;
 }
+
+.view_duanzi_article_bottom {
+    clear:both;
+    width: 20%;
+    min-height: 1em;
+    height: auto;
+    padding-bottom:1em;
+    margin-left: 80%;
+}
+
+.view_duanzi_article_bottom_line {
+    width:auto;
+    height:auto;
+    clear: both;
+}
+
+.subexample_right {
+    width: 50%;
+    line-height: 1.2em;
+    margin-right: 0.5em;
+    margin-top: 1em;
+    padding-right: 0.8em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+    float: right;
+}
+
+.view_duanzi_collectBox {
+    width: 3em;
+    height: auto;
+    float: left;
+    margin-top: 1em;
+    padding-left: 0.5em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+}
+
+.view_duanzi_likeBox {
+    width: 4em;
+    height: auto;
+    float: left;
+    margin-top: 1em;
+    padding-left: 0.5em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+    line-height: 1.3em;
+    color: #19CF8A;
+    border: none;
+}
