--- a/style/view_food.css
+++ b/style/view_food.css
@@ -26,6 +26,7 @@
 .content-left-menu {
     width: 100%;
     height: 1.2em;
+    padding-top:0.5em;
     padding-bottom: 0.8em;
     margin-bottom: 0.5em;
     clear: both;
@@ -129,6 +130,7 @@
 .view_food_body_dish_title {
     width: 3em;
     height: auto;
+    margin-right:1.5em;
     padding-bottom:0.3em;
     float: left;
     color: #666666;
@@ -136,7 +138,16 @@
 }
 
 .view_food_body_dish {
-    width: 60%;
+    width: 70%;
+    float: left;
     height: auto;
     color: #666666;
+}
+
+.article_bottom_food {
+    clear: both;
+    width: 35%;
+    margin-left: 65%;
+    min-height: 1em;
+    height: auto;
 }
