注册页面选择标签

--- a/style/reg_guide.css
+++ b/style/reg_guide.css
@@ -772,11 +772,11 @@ body {
         }
 
         .fav_tags_sel_v6 .sel_box .pic_local, .fav_tags_sel_v6 .sel_box .layer_bg_local div {
-            background-image: url("../../../images/register/fav_sel_img_v6/local.png");
+            background-image: url("../images/classification_label/local.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_cute_animal, .fav_tags_sel_v6 .sel_box .layer_bg_cute_animal div {
-            background-image: url("../../../images/register/fav_sel_img_v6/cute_animal.png");
+            background-image: url("../images/classification_label/cute_animal.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_movie, .fav_tags_sel_v6 .sel_box .layer_bg_movie div {
@@ -784,15 +784,15 @@ body {
         }
 
         .fav_tags_sel_v6 .sel_box .pic_arts, .fav_tags_sel_v6 .sel_box .layer_bg_arts div {
-            background-image: url("../../../images/register/fav_sel_img_v6/arts.png");
+            background-image: url("../images/classification_label/arts.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_estate, .fav_tags_sel_v6 .sel_box .layer_bg_estate div {
-            background-image: url("../../../images/register/fav_sel_img_v6/estate.png");
+            background-image: url("../images/classification_label/estate.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_famous, .fav_tags_sel_v6 .sel_box .layer_bg_famous div {
-            background-image: url("../../../images/register/fav_sel_img_v6/famous.png");
+            background-image: url("../images/classification_label/famous.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_fande, .fav_tags_sel_v6 .sel_box .layer_bg_fande div {
@@ -800,11 +800,11 @@ body {
         }
 
         .fav_tags_sel_v6 .sel_box .pic_mito, .fav_tags_sel_v6 .sel_box .layer_bg_mito div {
-            background-image: url("../../../images/register/fav_sel_img_v6/mito.png");
+            background-image: url("../images/classification_label/mito.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_history, .fav_tags_sel_v6 .sel_box .layer_bg_history div {
-            background-image: url("../../../images/register/fav_sel_img_v6/history.png");
+            background-image: url("../images/classification_label/history.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_sports, .fav_tags_sel_v6 .sel_box .layer_bg_sports div {
@@ -812,75 +812,75 @@ body {
         }
 
         .fav_tags_sel_v6 .sel_box .pic_sandt, .fav_tags_sel_v6 .sel_box .layer_bg_sandt div {
-            background-image: url("../../../images/register/fav_sel_img_v6/sandt.png");
+            background-image: url("../images/classification_label/sandt.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_travel, .fav_tags_sel_v6 .sel_box .layer_bg_travel div {
-            background-image: url("../../../images/register/fav_sel_img_v6/travel.png");
+            background-image: url("../images/classification_label/travel.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_music, .fav_tags_sel_v6 .sel_box .layer_bg_music div {
-            background-image: url("../../../images/register/fav_sel_img_v6/music.png");
+            background-image: url("../images/classification_label/music.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_pscience, .fav_tags_sel_v6 .sel_box .layer_bg_pscience div {
-            background-image: url("../../../images/register/fav_sel_img_v6/science.png");
+            background-image: url("../images/classification_label/science.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_tvseries, .fav_tags_sel_v6 .sel_box .layer_bg_tvseries div {
-            background-image: url("../../../images/register/fav_sel_img_v6/tvseries.png");
+            background-image: url("../images/classification_label/TV series.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_animation, .fav_tags_sel_v6 .sel_box .layer_bg_animation div {
-            background-image: url("../../../images/register/fav_sel_img_v6/animation.png");
+            background-image: url("../images/classification_label/animation.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_book, .fav_tags_sel_v6 .sel_box .layer_bg_book div {
-            background-image: url("../../../images/register/fav_sel_img_v6/book.png");
+            background-image: url("../images/classification_label/book.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_health, .fav_tags_sel_v6 .sel_box .layer_bg_health div {
-            background-image: url("../../../images/register/fav_sel_img_v6/health.png");
+            background-image: url("../images/classification_label/health.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_education, .fav_tags_sel_v6 .sel_box .layer_bg_education div {
-            background-image: url("../../../images/register/fav_sel_img_v6/education.png");
+            background-image: url("../images/classification_label/education.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_military, .fav_tags_sel_v6 .sel_box .layer_bg_military div {
-            background-image: url("../../../images/register/fav_sel_img_v6/military.png");
+            background-image: url("../images/classification_label/military.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_models, .fav_tags_sel_v6 .sel_box .layer_bg_models div {
-            background-image: url("../../../images/register/fav_sel_img_v6/models.png");
+            background-image: url("../images/classification_label/models.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_food, .fav_tags_sel_v6 .sel_box .layer_bg_food div {
-            background-image: url("../../../images/register/fav_sel_img_v6/food.png");
+            background-image: url("../images/classification_label/food.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_makeups, .fav_tags_sel_v6 .sel_box .layer_bg_makeups div {
-            background-image: url("../../../images/register/fav_sel_img_v6/makeups.png");
+            background-image: url("../images/classification_label/makeups.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_car, .fav_tags_sel_v6 .sel_box .layer_bg_car div {
-            background-image: url("../../../images/register/fav_sel_img_v6/car.png");
+            background-image: url("../images/classification_label/car.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_emotion, .fav_tags_sel_v6 .sel_box .layer_bg_emotion div {
-            background-image: url("../../../images/register/fav_sel_img_v6/emotion.png");
+            background-image: url("../images/classification_label/emotion.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_design, .fav_tags_sel_v6 .sel_box .layer_bg_design div {
-            background-image: url("../../../images/register/fav_sel_img_v6/design.png");
+            background-image: url("../images/classification_label/design.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_fashion, .fav_tags_sel_v6 .sel_box .layer_bg_fashion div {
-            background-image: url("../../../images/register/fav_sel_img_v6/fashion.png");
+            background-image: url("../images/classification_label/fashion.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_digital, .fav_tags_sel_v6 .sel_box .layer_bg_digital div {
-            background-image: url("../../../images/register/fav_sel_img_v6/digital.png");
+            background-image: url("../images/classification_label/digital.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_joke, .fav_tags_sel_v6 .sel_box .layer_bg_joke div {
@@ -888,31 +888,31 @@ body {
         }
 
         .fav_tags_sel_v6 .sel_box .pic_constellation, .fav_tags_sel_v6 .sel_box .layer_bg_constellation div {
-            background-image: url("../../../images/register/fav_sel_img_v6/constellation.png");
+            background-image: url("../images/classification_label/constellation.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_art, .fav_tags_sel_v6 .sel_box .layer_bg_art div {
-            background-image: url("../../../images/register/fav_sel_img_v6/art.png");
+            background-image: url("../images/classification_label/art.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_game, .fav_tags_sel_v6 .sel_box .layer_bg_game div {
-            background-image: url("../../../images/register/fav_sel_img_v6/game.png");
+            background-image: url("../images/classification_label/game.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_parenting, .fav_tags_sel_v6 .sel_box .layer_bg_parenting div {
-            background-image: url("../../../images/register/fav_sel_img_v6/parenting.png");
+            background-image: url("../images/classification_label/parenting.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_fitness, .fav_tags_sel_v6 .sel_box .layer_bg_fitness div {
-            background-image: url("../../../images/register/fav_sel_img_v6/fitness.png");
+            background-image: url("../images/classification_label/fitness.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_gov, .fav_tags_sel_v6 .sel_box .layer_bg_gov div {
-            background-image: url("../../../images/register/fav_sel_img_v6/gov.png");
+            background-image: url("../images/classification_label/gov.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_religion, .fav_tags_sel_v6 .sel_box .layer_bg_religion div {
-            background-image: url("../../../images/register/fav_sel_img_v6/religion.png");
+            background-image: url("../images/classification_label/religion.png");
         }
 
         .fav_tags_sel_v6 .sel_box .pic_news, .fav_tags_sel_v6 .sel_box .layer_bg_news div {
@@ -920,7 +920,7 @@ body {
         }
 
         .fav_tags_sel_v6 .sel_box .pic_hipster, .fav_tags_sel_v6 .sel_box .layer_bg_hipster div {
-            background-image: url("../../../images/register/fav_sel_img_v6/hipster.png");
+            background-image: url("../images/classification_label/hipster.png");
         }
 
         .fav_tags_sel_v6 .sel_box .layer {
