--- a/style/interests_notification.css
+++ b/style/interests_notification.css
@@ -8,4 +8,10 @@
 
 .notification_header_li{
     padding-left:20%;
+    padding-bottom:0.5em;
+}
+
+.task-info-center {
+    color: #D4D4D4;
+    text-align: center;
 }
