--- a/style/view.css
+++ b/style/view.css
@@ -1,16 +1,19 @@
 ﻿body {
 }
 
-.messageBox_view{
+.messageBox_view {
     width: 65%;
-    height:auto;
+    height: auto;
     margin-left: 8%;
     float: left;
 }
 
 .message_view {
-    height:auto;
+    height: auto;
+    padding-top: 2em;
     padding-bottom: 2em;
+    background-color: #FFFFFF;
+    box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
 }
 
 .artcle_title {
