--- a/style/view.css
+++ b/style/view.css
@@ -61,6 +61,7 @@
     width: 100%;
     min-height: 6em;
     margin-top: 2em;
+    margin-bottom:0.35em;
     background-color: #FFFFFF;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
@@ -291,12 +292,6 @@
 
 }
 
-.footer{
-    clear:both;
-    width:100%;
-    min-height:3em;
-    height:auto;
-}
 .fold-box {
     padding: 10px;
     background: #e5eecc;
