--- a/style/nav-total-left.css
+++ b/style/nav-total-left.css
@@ -106,17 +106,30 @@
     box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
 }
 
-.nav-right-one ul,.nav-right-two ul{
-	list-style: none;
-	list-style-type: none;
+.nav-right-three {
+    width: 20%;
+    min-height: 10em;
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
+    color: #2A2F43;
+    background-color: #FFFFFF;
+    float: left;
+    position: fixed;
+    margin-left: 72%;
+    box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
 }
 
-.nav-right-one ul li,.nav-right-two ul li{
+.nav-right-one ul, .nav-right-two ul, .nav-right-three ul {
+    list-style: none;
+    list-style-type: none;
+}
+
+.nav-right-one ul li,.nav-right-two ul li,.nav-right-three  ul li{
 	font-size: 1.2em;
 	line-height: 1.8em;
 	list-style: none;
 	list-style-type: none;
-	padding-left: 14%;
+	padding-left: 10%;
 	padding-top: 0.1em;
 	padding-bottom: 0.1em;
 	transition: 0.6s;
@@ -124,25 +137,25 @@
 	-moz-transition: 0.6s;
 }
 
-.nav-right-one ul li:hover,.nav-right-two ul li:hover{
+.nav-right-one ul li:hover,.nav-right-two ul li:hover,.nav-right-three  ul li:hover{
 	cursor: pointer;
 	background-color: #EBEBEB;
 }
 
-.nav-right-one ul li a,.nav-right-two ul li a{
-    font-size:14px;
+.nav-right-one ul li a,.nav-right-two ul li a,.nav-right-three  ul li a{
+    font-size:0.8em;
 	color: #4F94CD;
 	transition: 0.6s;
 	-webkit-transition: 0.6s;
 	-moz-transition: 0.6s;
 }
 
-.nav-right-one_a_after:after, .nav-right-two_a_after:after {
+.nav-right-one_a_after:after, .nav-right-two_a_after:after, .nav-right-three_a_after:after {
     text-decoration: none;
 }
 
-.nav-right-one ul li a:hover,.nav-right-two ul li a:hover{
-	cursor: pointer;
+.nav-right-one ul li a:hover, .nav-right-two ul li a:hover, .nav-right-three ul li a:hover {
+    cursor: pointer;
 }
 
 .showLeftPush:hover{
@@ -154,7 +167,7 @@
     height: 1.6em;
     margin: auto;
     margin-bottom:0.2em;
-    font-size: 1.2em;
+    font-size: 1.4em;
     border-bottom: 1px solid #EE7942;
     text-align: center;
 }
